# platega

./: LICENSE  README.md  pyproject.toml  verify_import.py
.github/workflows/: python-app.yml
examples/: inlinebot_create_invoice.py
platega/: __init__.py  client.py  exceptions.py  models.py  webhooks.py
